# stream-ciphers

./: Cargo.toml  README.md
.github/workflows/: benches.yml  cfb-mode.yml  cfb8.yml  chacha20.yml  ctr.yml  hc-256.yml  ofb.yml  rabbit.yml  salsa20.yml  workspace.yml
benches/: Cargo.toml
cfb-mode/: Cargo.toml
cfb8/: Cargo.toml
chacha20/: Cargo.toml
chacha20/src/: chacha.rs  legacy.rs  lib.rs  xchacha.rs
chacha20/src/backends/: soft.rs
chacha20/tests/: lib.rs
ctr/: Cargo.toml
ctr/src/: lib.rs
ctr/tests/ctr32/: little_endian.rs
hc-256/: Cargo.toml
hc-256/benches/: mod.rs
hc-256/src/: lib.rs
ofb/: Cargo.toml
rabbit/: Cargo.toml
rabbit/src/: lib.rs
rc4/src/: lib.rs
salsa20/: Cargo.toml
salsa20/src/: lib.rs  xsalsa.rs
