[workspace]
members = [
    "chacha20",
    "hc-256",
    "rabbit",
    "salsa20",
]

[patch.crates-io]
cipher = { git = "https://github.com/RustCrypto/traits/", branch = "new_traits" }
block-buffer = { git = "https://github.com/RustCrypto/utils", branch = "pad_error" }
inout = { git = "https://github.com/RustCrypto/utils", branch = "pad_error" }
