[package]
name = "ctr"
version = "0.7.0-pre"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = { git = "https://github.com/RustCrypto/traits", branch="cipher/v03_changes" }
block-buffer = { git = "https://github.com/RustCrypto/utils", branch="block_utils" }

[dev-dependencies]
aes = { git = "https://github.com/RustCrypto/block-ciphers", branch="cipher_v0.3" }
cipher = { git = "https://github.com/RustCrypto/traits", branch="cipher/v03_changes", features = ["dev"] }
hex-literal = "0.2"
