[package]
name = "rabbit"
version = "0.4.0" # Also update html_root_url in lib.rs when bumping this
description = "An implementation of the Rabbit Stream Cipher Algorithm"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustCrypto/stream-ciphers"
keywords = ["crypto", "rabbit", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
cipher = "0.4"
zeroize = { version = ">=1, <1.5", optional = true, default-features = false }

[dev-dependencies]
cipher = { version = "0.4", features = ["dev"] }
hex-literal = "0.3"
